modified line height and spacing of the spotlight news titles so that the descenders don't get cut off in Firefox fix ITC-497

--- a/style.css
+++ b/style.css
@@ -2174,9 +2174,9 @@ h5.home_date {
     }
 
     div.spotlight_post {
-        padding: 20px;
+        padding: 15px;
         border-bottom: 1px solid LightGray;
-        height: 58px;
+        height: 68px;
     }
 
     #spotlight_paginator {
@@ -2222,7 +2222,8 @@ h5.home_date {
     div.spotlight_post p.post_title {
         margin: 0px;
         font-size: 16px;
-        max-height: 60px;
+        max-height: 65px;
+        line-height: 21px;
         overflow: hidden;
     }
 
